<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color01"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/OB1T1"
        android:layout_width="260dp"
        android:layout_height="77dp"
        android:layout_marginTop="100dp"
        android:text="@string/on_b01"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="354dp"
        android:layout_height="69dp"
        android:layout_marginBottom="176dp"
        android:text="@string/on_b01_des"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startbtn"
        android:layout_width="325dp"
        android:layout_height="56dp"
        android:background="@drawable/background_btn1"
        android:text="@string/on_b01_startbtn"
        android:textColor="@color/color01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.641" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OB1T1"
        app:srcCompat="@drawable/bording_image_03" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="410dp"
        android:layout_height="74dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/OB1T1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:id="@+id/Skipbtn"
            android:layout_width="395dp"
            android:layout_height="54dp"
            android:layout_marginTop="18dp"
            android:text="@string/skipbtn"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="italic" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="70dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toTopOf="@+id/startbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/tag01" />

</androidx.constraintlayout.widget.ConstraintLayout>