<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color02">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_marginTop="40dp"
            android:text="@string/traget_page_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:background="@drawable/traget_navibtn">

            <ImageView
                android:id="@+id/imageView31"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/home_gray" />

            <ImageView
                android:id="@+id/imageView33"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/gold_icon01" />

            <ImageView
                android:id="@+id/imageView34"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/icon_1" />

            <ImageView
                android:id="@+id/imageView35"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/icon_3" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="722dp"
        android:background="@drawable/traget_stat_background"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="210dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color02"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/target_subtitle"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/traget_value"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="35sp" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/gold"
                    android:text="@string/btn_name_target"
                    android:textColor="@color/color01" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/imageView24"
            android:layout_width="350dp"
            android:layout_height="210dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/group_2" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sub_title_target"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textAlignment="center"/>

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/color02"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView25"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="7dp"
                    app:srcCompat="@drawable/youtube_logo" />

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:text="@string/btn1_title"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView26"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ei_plus" />

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="50dp"
                    android:layout_height="21dp"
                    android:layout_marginTop="21dp"
                    android:layout_weight="1"
                    android:text="@string/btn1_value"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <ImageView
                    android:id="@+id/imageView28"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ei_minus" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/color02"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/imageView25_copy"
                    android:layout_width="50dp"
                    android:layout_marginTop="7dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    app:srcCompat="@drawable/uber_logo" />

                <TextView
                    android:id="@+id/textView32_copy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Uber       "
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/imageView26_copy"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ei_plus" />

                <TextView
                    android:id="@+id/textView33_copy"
                    android:layout_width="50dp"
                    android:layout_height="21dp"
                    android:layout_marginTop="21dp"
                    android:textSize="17sp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:text="@string/btn2_value_target" />

                <ImageView
                    android:id="@+id/imageView28_copy"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ei_minus" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>